--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <button  id="play-button">Start Match!</button>
         </div>
         <div class="hand-selected">
-            <img id="hand-pl" src="/img/rock.png" alt="">
-            <img id="hand-ia" src="/img/rock.png" alt="">
+            <img id="hand-pl" src="./img/rock.png" alt="">
+            <img id="hand-ia" src="./img/rock.png" alt="">
         </div>
 
         <div class="scoreboard">
