--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body id="body">
     
-    <section id="intro-page" class="intro-page">
+    <section class="intro-page">
             <h1 class="title">Rock Paper Scissors</h1>
-            <button class="game-btn" id="gameBtn"> Let´s play!</button>
+            <button class="game-btn" > Let´s play!</button>
     </section>
 
-    <section id="game-page" class="game-page pageDisappear">
+    <section  class="game-page pageDisappear">
         <div class="hand-selection">
             <h3 >Select your hand</h3>
-            <button  id="rock-button" class="rock-button selectedButton">Rock</button>
-            <button  id="paper-button" class="paper-button">Paper</button>
-            <button  id="scissors-button" class="scissors-button">Scissors</button>
+            <button  class="rock-button selectedButton">Rock</button>
+            <button  class="paper-button">Paper</button>
+            <button  class="scissors-button">Scissors</button>
             <button  id="play-button">Start Match!</button>
         </div>
         <div class="hand-selected">
@@ -31,11 +31,11 @@
         </div>
 
         <div class="scoreboard">
-            <div id="score-pl" class="score-pl">
+            <div class="score-pl">
                 0
             </div>
             <h3>Score</h3>
-            <div id="score-ia" class="score-ia">
+            <div class="score-ia">
                 0
             </div>
         </div>
