--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
 
     <section class="inputPage  pageDisappear">
-            <h2>What´s your name?</h2>
+            <h2 id="inputPageTitle">What´s your name?</h2>
             <input id="input" type="text" maxlength="7">
             <button id="inputBtn">Let´s play!</button>
     </section>
