--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </ul>
             </div>
             <div id="computerHandListContainer" >
-                <ul id="computerHandList" class="ComputerRock">
+                <ul id="computerHandList" class="rockComputer">
                    <li><img src="./img/rock.png" alt=""></li>
                    <li><img src="./img/paper.png" alt=""></li>
                    <li><img src="./img/scissors.png" alt=""></li>
